Versión 5.9.5.0 Cambios en volumenes y rangos de edades covid19(transmision y uo1)

--- a/res/values/strings_covid19.xml
+++ b/res/values/strings_covid19.xml
@@ -42,6 +42,45 @@
     <string name="bhc_covid19">BHC: 1 ml es el volumen requerido</string>
     <string name="bhc_covid19_perm">BHC: 1 ml es el volumen máximo permitido</string>
 
+    <!--nuevos volumenes covid - UO1 28/09/2021-->
+    <string name="rojo_covid19_2a6m_uo1">6 meses y menos de 2 años: Rojo: 2 ml es el volumen requerido</string>
+    <string name="rojo_covid19_2a6m_perm_uo1">6 meses y menos de 2 años: Rojo: 2 ml es el volumen máximo permitido</string>
+    <string name="rojo_covid19_mas2_uo1">Mayores de 2 años. Rojo: 2 ml es el volumen requerido</string>
+    <string name="rojo_covid19_mas2_perm_uo1">Mayores de 2 años. Rojo: 2 ml es el volumen máximo permitido</string>
+    <string name="rojo_covid19_6m_uo1">Menor de 6 meses: Rojo: no tomar muestra</string>
+
+    <string name="pbmc_covid19_2a6m_uo1">6 meses y menos de 2 años: PBMC: 2 ml es el volumen requerido</string>
+    <string name="pbmc_covid19_2a6m_perm_uo1">6 meses y menos de 2 años: PBMC: 2 ml es el volumen máximo permitido</string>
+    <string name="pbmc_covid19_mas2_uo1">Mayores de 2 años: PBMC: 6 ml es el volumen requerido</string>
+    <string name="pbmc_covid19_mas2_perm_uo1">Más de 2 años: PBMC: 6 ml es el volumen máximo permitido</string>
+    <string name="pbmc_covid19_6m_uo1">Menor de 6 meses: PBMC: 2 ml es el volumen requerido</string>
+    <string name="pbmc_covid19_6m_perm_uo1">Menor de 6 meses: PBMC: 2 ml es el volumen máximo permitido</string>
+
+    <!--nuevos volumenes COHORTE  - FAMILA (TRASMISIÓN COVID ) 28/09/2021-->
+    <string name="rojo_covid19_6m_chf">Menor de 6 meses: Rojo: 2 ml es el volumen requerido</string>
+    <string name="rojo_covid19_6m_perm_chf">Menor de 6 meses: Rojo: 2 ml volumen máximo permitido</string>
+    <string name="rojo_covid19_3a6m_chf">6 meses y menor de 3 años: Rojo: 1 ml es el volumen requerido</string>
+    <string name="rojo_covid19_3a6m_perm_chf">6 meses y menor de 3 años: Rojo: 1 ml volumen máximo permitido</string>
+    <string name="rojo_covid19_14a3a_chf">Entre 3 y 14 años. Rojo: 2 ml es el volumen requerido</string>
+    <string name="rojo_covid19_14a3a_perm_chf">Entre 3 y 14 años. Rojo: 2 ml volumen máximo permitido</string>
+    <string name="rojo_covid19_mas15_chf">Mayores de 15 años. Rojo: 6 ml es el volumen requerido</string>
+    <string name="rojo_covid19_mas15_perm_chf">Mayores de 15 años. Rojo: 6 ml volumen máximo permitido</string>
+
+    <string name="pbmc_covid19_6m_chf">Menor de 6 meses: PBMC: No tomar muestra</string>
+    <string name="pbmc_covid19_6m_perm_chf">Menor de 6 meses: PBMC: No tomar muestra</string>
+    <string name="pbmc_covid19_3a6m_chf">6 meses y menor de 3 años: PBMC: 3 ml es el volumen requerido</string>
+    <string name="pbmc_covid19_3a6m_perm_chf">6 meses y menor de 3 años: PBMC: 3 ml volumen máximo permitido</string>
+    <string name="pbmc_covid19_14a3a_chf">Entre 3 y 14 años. PBMC: 6 ml es el volumen requerido</string>
+    <string name="pbmc_covid19_14a3a_perm_chf">Entre 3 y 14 años. PBMC: 6 ml volumen máximo permitido</string>
+    <string name="pbmc_covid19_mas15_chf">Mayores de 15 años. PBMC: 6 ml es el volumen requerido</string>
+    <string name="pbmc_covid19_mas15_perm_chf">Mayores de 15 años. PBMC: 6 ml volumen máximo permitido</string>
+
+    <string name="bhc_covid19_mas15_chf">Mayores de 15 años. BHC: 1 ml es el volumen requerido</string>
+    <string name="bhc_covid19_mas15_perm_chf">Mayores de 15 años. BHC: 1 ml volumen máximo permitido</string>
+    <string name="bhc_covid19_3a14a_chf">Entre 3 y 14 años: BHC: 1 ml es el volumen requerido</string>
+    <string name="bhc_covid19_3a14a_perm_chf">Entre 3 y 14 años: BHC: 1 ml es el volumen permitido</string>
+    <string name="bhc_covid19_menos3a_chf">Menor de 3 años: BHC: no tomar muestra</string>
+
     <!--Tamizaje Transmision COvid -->
     <string name="candidates">Candidatos Transmisión</string>
     <string name="candidates_list">Lista de candidatos activos</string>
