Versión 6.0.0.1 Mejoras y correcciones consentimientos MA2022

--- a/res/values/strings_covid19.xml
+++ b/res/values/strings_covid19.xml
@@ -227,6 +227,7 @@
     <string name="feb20">1.	¿Desde febrero de 2021 ha tenido usted o su niño/a alguno de los siguientes síntomas?</string>
     <string name="oct20">1.	¿Desde octubre de 2020 ha tenido usted o su niño/a alguno de los siguientes síntomas?</string>
     <string name="feb21">2.	¿Desde febrero de 2021 ha tenido usted o su niño/a alguno de los siguientes síntomas?</string>
+    <string name="nov21">2.	¿Desde noviembre de 2021 ha tenido usted o su niño/a alguno de los siguientes síntomas?</string>
     <string name="feb20Febricula">Sintió febrícula con o sin presencia de temperatura</string>
     <string name="feb20Fiebre">Fiebre > 38C</string>
     <string name="feb20Escalofrio">Escalofríos</string>
