--- a/res/layout/list_add_casos_covid19.xml
+++ b/res/layout/list_add_casos_covid19.xml
@@ -131,5 +131,15 @@
             android:drawableTop="@drawable/ic_menu_search"
             style="?android:attr/buttonBarStyle" />
 
+        <Button
+                android:background="@drawable/selectable_item_background"
+                android:id="@+id/new_MA_button_cv19"
+                android:layout_width="0dp"
+                android:layout_weight="1"
+                android:layout_height="wrap_content"
+                android:text="@string/new_samp_MA"
+                android:drawableTop="@drawable/ic_blood"
+                style="?android:attr/buttonBarStyle" />
+
     </LinearLayout>
 </LinearLayout>
