--- a/res/values/strings_covid19.xml
+++ b/res/values/strings_covid19.xml
@@ -224,10 +224,13 @@
 
     <!--Cuestionario Covid19 -->
     <string name="covid19_questionnaire">Cuestionario Covid19</string>
-    <string name="feb20">1.	¿Desde febrero de 2021 ha tenido usted o su niño/a alguno de los siguientes síntomas?</string>
+    <!--<string name="feb20">1.	¿Desde febrero de 2021 ha tenido usted o su niño/a alguno de los siguientes síntomas?</string>-->
+    <string name="feb20">1.	¿Desde febrero de 2022 ha tenido usted o su niño/a alguno de los siguientes síntomas?</string>
     <string name="oct20">1.	¿Desde octubre de 2020 ha tenido usted o su niño/a alguno de los siguientes síntomas?</string>
-    <string name="feb21">2.	¿Desde febrero de 2021 ha tenido usted o su niño/a alguno de los siguientes síntomas?</string>
-    <string name="nov21">2.	¿Desde noviembre de 2021 ha tenido usted o su niño/a alguno de los siguientes síntomas?</string>
+    <!--<string name="feb21">2.	¿Desde febrero de 2021 ha tenido usted o su niño/a alguno de los siguientes síntomas?</string>-->
+    <string name="feb21">2.	¿Desde febrero de 2022 ha tenido usted o su niño/a alguno de los siguientes síntomas?</string>
+    <!--<string name="nov21">2.	¿Desde noviembre de 2021 ha tenido usted o su niño/a alguno de los siguientes síntomas?</string>-->
+    <string name="nov21">2.	¿Desde noviembre de 2022 ha tenido usted o su niño/a alguno de los siguientes síntomas?</string>
     <string name="feb20Febricula">Sintió febrícula con o sin presencia de temperatura</string>
     <string name="feb20Fiebre">Fiebre > 38C</string>
     <string name="feb20Escalofrio">Escalofríos</string>
@@ -342,7 +345,8 @@
     <string name="wrongYear">Año inválido. Debe ser entre <xliff:g id="year1">%1$s</xliff:g> y <xliff:g id="year2">%2$s</xliff:g></string>
 
     <!--nuevas preguntas Cuestionario Covid19 Muestreo Octubre 2021 -->
-    <string name="enfermoCovid19">1. ¿Desde febrero 2021 a usted o su niño/a le han diagnosticado o ha estado enfermo con la COVID19?</string>
+    <!--<string name="enfermoCovid19">1. ¿Desde febrero 2021 a usted o su niño/a le han diagnosticado o ha estado enfermo con la COVID19?</string>-->
+    <string name="enfermoCovid19">1. ¿Desde febrero 2022 a usted o su niño/a le han diagnosticado o ha estado enfermo con la COVID19?</string>
     <string name="cuantasVecesEnfermo">¿Cuantas veces ha estado enfermo en este periodo?</string>
     <string name="sabeEvento1">¿Conoce la fecha exacta que enfermo (evento 1)?</string>
     <string name="fechaEvento1">Fecha enfermó evento 1</string>
