Revert "Merge branch 'master' of https://github.com/repositorioics/estudios-ics-app"
This reverts commit 4b7e3aff5fd8c5bafadbc58153889af819ab5644, reversing
changes made to c71b3b4f41fdedebe5517bb58cfcb6614df2a7ea.

--- a/res/values/strings_covid19.xml
+++ b/res/values/strings_covid19.xml
@@ -224,7 +224,6 @@
 
     <!--Cuestionario Covid19 -->
     <string name="covid19_questionnaire">Cuestionario Covid19</string>
-
     <!--<string name="feb20">1.	¿Desde febrero de 2021 ha tenido usted o su niño/a alguno de los siguientes síntomas?</string>-->
     <string name="feb20">1.	¿Desde febrero de 2022 ha tenido usted o su niño/a alguno de los siguientes síntomas?</string>
     <string name="oct20">1.	¿Desde octubre de 2020 ha tenido usted o su niño/a alguno de los siguientes síntomas?</string>
@@ -357,6 +356,7 @@
     <string name="fechaEvento2">Fecha enfermó evento 2</string>
     <string name="sabeEvento3">¿Conoce la fecha exacta que enfermo (evento 3)?</string>
     <string name="fechaEvento3">Fecha enfermó evento 3</string>
+    <string name="presentoSintomas">¿Presentó alguno de los siguientes síntomas durante este evento?</string>
     <string name="oxigenoDomicilio">20. ¿ A Ud. o su niño/a le administraron oxígeno en su domicilio?</string>
     <string name="tiempoOxigenoDom">20. 1 Por cuanto tiempo le administraron?</string>
     <string name="vacunadoCovid19">29. ¿Usted o su niño/a han sido vacunado en la jornada de vacunación voluntaria contra la COVID-19?</string>
@@ -400,21 +400,4 @@
     <string name="covid19PosteriorVacuna">32. ¿Ud. o su niño presentaron síntomas que sospecharon enfermedad por Covid-19 Posterior a haber recibido la vacuna de Covid-19?</string>
     <string name="sabeFechaEnfPostVac">¿Conoce la fecha exacta que presentó sintomas posterior a haber recibido la vacuna de Covid-19?</string>
     <string name="fechaEnfPostVac">Fecha presentó sintomas</string>
-
-    <!--MA 2024 -->
-    <string name="dxEnfermoCovid19">1. ¿Alguna vez usted o su hijo/a han sido diagnosticados o han estado enfermos con COVID-19?</string>
-    <string name="sintomaTos">Tos</string>
-    <string name="queSintomasPresenta2">3. ¿Usted o su niño/a que síntomas presenta aún?</string>
-    <string name="sabeTiempoRecuperacion2">4. ¿ Sabe cuánto tiempo le tomo usted o su niño/a recuperarse de los síntomas secundarios a COVID-19 y recobrar su salud normal?</string>
-    <string name="severidadEnfermedad2">5. ¿En el momento más severo de su enfermedad, diría que su enfermedad o la de su niño/a fue?</string>
-    <string name="fumado2">7. ¿Ha fumado alguna vez en su vida?</string>
-    <string name="fumadoCienCigarrillos2">8. ¿Ha fumado al menos 100 cigarrillos en su vida?</string>
-    <string name="fumadoPrevioEnfermedad2">9. ¿En los días previos a que se enfermara, usted fumaba cigarrillos todos los días o algunos días previo a que se enfermara?</string>
-    <string name="fumaActualmente2">10. ¿Actualmente usted fuma cigarrillos todos los días o algunos días?</string>
-    <string name="embarazada2">11. ¿Usted estaba embarazada al momento de ser diagnosticada o sospechosa de COVID19?</string>
-    <string name="dabaPecho2">12. Si estaba embarazada recientemente al momento de ser diagnosticada con COVID19, ¿Usted estaba dando pecho materno?</string>
-    <string name="vacunadoCovid192">13. ¿Usted o su niño/a han sido vacunado en la jornada de vacunación voluntaria contra la COVID-19?</string>
-    <string name="muestraTarjetaVac2">14. ¿Puede mostrarnos su tarjeta de vacunación contra la COVID 19?</string>
-    <string name="sabeFechaUltimaEnf">2. ¿Sabe cual fue la fecha de su última enfermedad de COVID-19?</string>
-    <string name="condiciones2">6. ¿Algún médico u otro profesional de la salud le ha dicho alguna vez que usted o su niño/a padece alguna de estas condiciones?</string>
 </resources>
